fix sodium graph spacing

--- a/css/typography.css
+++ b/css/typography.css
@@ -278,7 +278,7 @@ padding: 5px;text-align:center
 .serving-color-val{
     fill:none;
 }
-svg{margin-top:10px;}
+svg{margin-top:15px;}
 #sodium{margin-top:0;}
 
 /*You*/
